# tsundoku

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md
src/tsundoku/: datamodel.rs  lib.rs
