[package]
name = "tsundoku"
version = "0.1.0"
authors = ["Adam Harries <harries.adam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="tsundoku"
path="src/tsundoku/lib.rs"

[dependencies]
clap = "~2.27.0"
chrono = "0.4"

[dependencies.rusqlite]
version = "0.23.1"
features = ["bundled", "chrono"]